Refactored Library module